# diffuse-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: diffusiongemma.md
src/: gguf_tokenizer.rs  kernels.rs  main.rs  model.rs  server.rs
src/model/: attention.rs  cache.rs  forward.rs  loader.rs  matmul.rs  ops.rs  sampler.rs  tests.rs
tools/: gsm8k_eval.py
