[package]
name = "diffuse-rs"
version = "0.4.0"
edition = "2021"
description = "Pure Rust CPU inference engine for diffusion language models"
license = "AGPL-3.0"

[dependencies]
candle-core = "0.8"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"
memmap2 = "0.9"
fancy-regex = "0.14"

# Server (tokenizers uses the pure-Rust regex backend so aarch64
# cross-compiles without a C toolchain)
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["fancy-regex"] }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", optional = true }
parking_lot = { version = "0.12", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
server = ["axum", "tokio", "tokio-stream", "tokenizers", "parking_lot", "serde", "serde_json"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
